--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.0
   font_awesome_flutter: ^10.1.0
+  pin_code_fields: ^7.4.0
   country_list_pick: ^1.0.1+5
 
 dev_dependencies:
