--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   pin_code_fields: ^7.4.0
   country_list_pick: ^1.0.1+5
+  hive: ^2.2.1
+  hive_flutter: ^1.1.0
+  dio: ^4.0.6
+  provider: ^6.0.3
+  get_it: ^7.2.0
+  global_configuration:
 
 dev_dependencies:
   flutter_test:
